--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./src/styles/resetStyle.css" />
     <link rel="stylesheet" href="src/styles/globalStyle.css" />
     <link rel="stylesheet" href="./src/styles/style.css" />
+    <link rel="stylesheet" href="./src/styles/carousel.css" />
   </head>
   <body>
     <header class="containerHeader">
@@ -109,8 +110,10 @@
       </div>
 
       <div class="containerInfo">
-        <h2 class="containerInfo__title">O Melhor de lista de canais, filmes e séries.</h2>
-        <p  class="containerInfo__text">
+        <h2 class="containerInfo__title">
+          O Melhor de lista de canais, filmes e séries.
+        </h2>
+        <p class="containerInfo__text">
           Teste agora mesmo a melhor lista de canais, filmes e séries do Brasil,
           2 horas 100% grátis
         </p>
@@ -150,8 +153,97 @@
           </div>
         </a>
       </div>
+
+      <section id="moviesSlideWrapper">
+        <ul id="moviesCarousel" class="animate">
+          <li class="movieSlide animate">
+            <img src="./src/assets/MoviesCarousel/banker.jpeg" />
+          </li>
+          <li class="movieSlide animate">
+            <img src="./src/assets/MoviesCarousel/batman.jpeg" />
+          </li>
+          <li class="movieSlide animate">
+            <img src="./src/assets/MoviesCarousel/bruxo.jpeg" />
+          </li>
+          <li class="movieSlide animate">
+            <img src="./src/assets/MoviesCarousel/homemnorte.jpeg" />
+          </li>
+          <li class="movieSlide animate">
+            <img src="./src/assets/MoviesCarousel/joker.jpeg" />
+          </li>
+          <li class="movieSlide animate">
+            <img src="./src/assets/MoviesCarousel/loki.jpeg" />
+          </li>
+          <li class="movieSlide animate">
+            <img src="./src/assets/MoviesCarousel/mandalorian.jpeg" />
+          </li>
+          <li class="movieSlide animate">
+            <img src="./src/assets/MoviesCarousel/strange.jpeg" />
+          </li>
+          <li class="movieSlide animate">
+            <img src="./src/assets/MoviesCarousel/tim.png" />
+          </li>
+          <li class="movieSlide animate">
+            <img src="./src/assets/MoviesCarousel/vikings.jpeg" />
+          </li>
+        </ul>
+      </section>
+
+      <div id="carousel-container">
+        <div>
+          <ul id="carousel" class="animate">
+            <li class="slide animate">
+              <h3>Bons Canais</h3>
+              <p>
+                Tem bastante canais de boa qualidade, sem muitos travamentos
+                quando assisto não tenho problema nenhum.
+              </p>
+              <div>
+                <img src="./src/assets/usersComments/1.png" />
+                <p>Maria, Plano trimestral.</p>
+              </div>
+            </li>
+
+            <li class="slide animate">
+              <h3>Bons conteúdos</h3>
+              <p>
+                Ótimos conteúdos, tem uma variedade muito grande de canais,
+                filmes e series. Recomendo!
+              </p>
+              <div>
+                <img src="./src/assets/usersComments/2.png" />
+                <p>Carlos henrique, Plano trimestral.</p>
+              </div>
+            </li>
+
+            <li class="slide animate">
+              <h3>Suporte bom!</h3>
+              <p>
+                Já tive muitos problemas com instalação, mas aqui tive um bom
+                suporte para me ajudar em todos os passos.
+              </p>
+              <div>
+                <img src="./src/assets/usersComments/3.png" />
+                <p>João, Plano Mensal.</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div id="controls">
+          <span id="prev"
+            ><img
+              src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1014830/prev.png"
+          /></span>
+          <span id="next"
+            ><img
+              src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1014830/next.png"
+          /></span>
+        </div>
+      </div>
     </main>
 
     <script src="./src/scripts/index.js"></script>
+    <script src="./src/scripts/moviesCarousel.js"></script>
+    <script src="./src/scripts/usersComments.js"></script>
   </body>
 </html>
