fix: movies carousel

--- a/index.html
+++ b/index.html
@@ -775,59 +775,8 @@
               </div>
             </div>
           </div>
-          
-      <div id="carousel-container">
-        <div>
-          <ul id="carousel" class="animate">
-            <li class="slide animate">
-              <h3>Bons Canais</h3>
-              <p>
-                Tem bastante canais de boa qualidade, sem muitos travamentos
-                quando assisto não tenho problema nenhum.
-              </p>
-              <div>
-                <img src="./src/assets/usersComments/1.png" />
-                <p>Maria, Plano trimestral.</p>
-              </div>
-            </li>
-
-            <li class="slide animate">
-              <h3>Bons conteúdos</h3>
-              <p>
-                Ótimos conteúdos, tem uma variedade muito grande de canais,
-                filmes e series. Recomendo!
-              </p>
-              <div>
-                <img src="./src/assets/usersComments/2.png" />
-                <p>Carlos henrique, Plano trimestral.</p>
-              </div>
-            </li>
-
-            <li class="slide animate">
-              <h3>Suporte bom!</h3>
-              <p>
-                Já tive muitos problemas com instalação, mas aqui tive um bom
-                suporte para me ajudar em todos os passos.
-              </p>
-              <div>
-                <img src="./src/assets/usersComments/3.png" />
-                <p>João, Plano Mensal.</p>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div id="controls">
-          <span id="prev"
-            ><img
-              src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1014830/prev.png"
-          /></span>
-          <span id="next"
-            ><img
-              src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1014830/next.png"
-          /></span>
-        </div>
-      </div>
-
+          9 - 16
+          x - 40
           <div class="containarPlans__items mobile">
            
             <div class="containarPlans__item containarPlans__item__Primary">
@@ -1437,7 +1386,7 @@
       </main>
     </div>
     <script src="./src/scripts/index.js"></script>
-   
+   <script src="./src/scripts/moviesCarousel.js"></script>
     <script src="./src/scripts/usersComments.js"></script>
   </body>
 </html>
