--- a/index.html
+++ b/index.html
@@ -1358,7 +1358,7 @@
                   src="./src/assets/servicesInfo/suporte.png"
                   loading="lazy"
                   alt="Icone de suporte"
-                  class="containerservicesInfo__image"
+                  class="containerservicesInfo__image purple"
                 />
               </div>
 
@@ -1376,7 +1376,7 @@
                   src="./src/assets/servicesInfo/play.png"
                   loading="lazy"
                   alt="Icone de assista"
-                  class="containerservice_image"
+                  class="containerservice_image orange"
                 />
               </div>
 
@@ -1396,7 +1396,7 @@
                   src="./src/assets/servicesInfo/server.png"
                   loading="lazy"
                   alt="Icone de servidor"
-                  class="containerservice_image"
+                  class="containerservice_image red"
                 />
               </div>
 
@@ -1414,7 +1414,7 @@
                   src="./src/assets/servicesInfo/diverse.png"
                   loading="lazy"
                   alt="Icone de preço"
-                  class="containerservice_image"
+                  class="containerservice_image blue"
                 />
               </div>
 
@@ -1433,7 +1433,7 @@
                   src="./src/assets/servicesInfo/security.png"
                   loading="lazy"
                   alt="Icone de segurança"
-                  class="containerservice_image"
+                  class="containerservice_image purple"
                 />
               </div>
 
@@ -1451,6 +1451,7 @@
                   src="./src/assets/servicesInfo/price.png"
                   loading="lazy"
                   alt="Icone de preço"
+                  class="containerservice_image green"
                 />
               </div>
 
@@ -1637,9 +1638,9 @@
           
 
            
-        </div>
+          </div>
 
-        <div class="containerFaq" id="duvidas">
+          <div class="containerFaq" id="duvidas">
           <h2>FAQ</h2>
 
           <div class="containerFaq__list">
@@ -1667,6 +1668,7 @@
               <summary>É necessário uma Tv Box?</summary>
               <p>O uso de uma box é necessário se sua televisão não ser uma SmartTv.</p>
             </details>
+          </div>
           </div>
         </div>
       </main>
