--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./src/assets/favicon-nine.png" type="image/x-icon">
     <title>Liberando Canais</title>
     <link rel="stylesheet" href="./src/styles/resetStyle.css" />
     <link rel="stylesheet" href="src/styles/globalStyle.css" />
@@ -2062,58 +2063,12 @@
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="containerFaq" id="duvidas">
-            <h2>FAQ</h2>
+        <div class="containerFaq" id="duvidas">
+          <h2>FAQ</h2>
 
-            <div class="containerFaq__list">
-              <details>
-                <summary>O que é?</summary>
-                <p>
-                  É um novo método de transmissão de sinais televisivos. Assim
-                  como o VOIP (Voz sobre IP), usa o protocolo IP Internet
-                  Protocol como meio de transporte do conteúdo.
-                </p>
-              </details>
-
-              <details>
-                <summary>Posso testar antes de assinar?</summary>
-                <p>
-                  Possuímos planos mensais, onde você pode renovar livremente.
-                  Assim como também possuímos planos mais longos como os anuais
-                  com grandes descontos, o poder de escolha é seu.
-                </p>
-              </details>
-
-              <details>
-                <summary>Como funciona as renovações?</summary>
-                <p>
-                  Nossas assinaturas não possuem taxas, multas ou fidelidades,
-                  podendo ser cancelado a qualquer momento.
-                </p>
-              </details>
-
-              <details class="containerFaq__item">
-                <summary>Posso assistir em mais de uma tela?</summary>
-                <p>
-                  Você pode configurar seu login em diversos dispositivos, porém
-                  não poderá ver simultâneamente em duas telas sem adquirir o
-                  ponto extra. Adquira o ponto extra para ver em mais de uma
-                  tela ao mesmo tempo. Se ainda restar alguma dúvida entre em
-                  contato conosco, ficaremos feliz em esclarecer toda e qualquer
-                  dúvida
-                </p>
-              </details>
-
-              <details>
-                <summary>É necessário uma Tv Box?</summary>
-                <p>
-                  O uso de uma box é necessário se sua televisão não ser uma
-                  SmartTv.
-                </p>
-              </details>
-            </div>
-          </div>
+        
         </div>
       </main>
       <footer class="containerFooter">
@@ -2143,6 +2098,7 @@
       </footer>
     </div>
     <script src="./src/scripts/index.js"></script>
+    <script src="./src/scripts/faq.js"></script>
     <script src="./src/scripts/moviesCarousel.js"></script>
     <script src="./src/scripts/channelsCarousel.js"></script>
   </body>
