--- a/index.html
+++ b/index.html
@@ -1653,6 +1653,38 @@
           </section>
         </div>
 
+        <div class="containerChannels">
+          <h2>Canais No Brasil</h2>
+
+         
+          <div class="containerChannels__list">
+              <details class="containerChannels__details">
+                <summary>Esportes</summary>
+
+                <ul>
+                  <li><img src="./src/assets/canaisExemple/esporte1.png" alt="esporte iamgem 1"></li>
+                  <li><img src="./src/assets/canaisExemple/esporte2.png" alt="esporte iamgem 2"></li>
+                  <li><img src="./src/assets/canaisExemple/esporte3.png" alt="esporte iamgem 3"></li>
+                  <li><img src="./src/assets/canaisExemple/esporte4.png" alt="esporte iamgem 4"></li>
+                  <li><img src="./src/assets/canaisExemple/esporte5.png" alt="esporte iamgem 5"></li>
+                  <li><img src="./src/assets/canaisExemple/esporte6.png" alt="esporte iamgem 6"></li>
+                  <li><img src="./src/assets/canaisExemple/esporte7.png" alt="esporte iamgem 7"></li>
+                </ul>
+              </details>
+
+              <details>
+                <summary>Ultra HD</summary>
+
+                <ul>
+                  <li><img src="./src/assets/canaisExemple/ultra1.webp" alt="ultra Hd iamgem 1"></li>
+                  <li><img src="./src/assets/canaisExemple/ultra2.webp" alt="ultra Hd iamgem 2"></li>
+                  <li><img src="./src/assets/canaisExemple/ultra3.webp" alt="ultra Hd iamgem 3"></li>
+                  <li><img src="./src/assets/canaisExemple/ultra4.webp" alt="ultra Hd iamgem 4"></li>
+                </ul>
+              </details>
+          </div>
+        </div>
+
         <div class="containerServicesInfo">
           <div class="containerServicesInfo__title">
             <h2>Você só encontra aqui</h2>
