feat: header carousel

--- a/index.html
+++ b/index.html
@@ -54,39 +54,52 @@
         </div>
 
         <div class="headerSliderWrapper">
-          <div class="headerSlider">
+          <div class="headerSliderButtonsWrapper">
             <img
-              class="headerSliderIcon"
-              src="./src/assets/headerCarousel/shield.png"
+              src="./src/assets/headerCarousel/arrowleft.svg"
+              class="headerSliderBtns"
+              id="headerSliderBtnsBack"
             />
-            <p class="headerSliderText">Site 100% seguro com segurança SSL</p>
+            <img
+              src="./src/assets/headerCarousel/arrowright.svg"
+              class="headerSliderBtns"
+              id="headerSliderBtnsNext"
+            />
           </div>
 
-          <div class="headerSlider">
-            <img
-              class="headerSliderIcon"
-              src="./src/assets/headerCarousel/creditcard.png"
-            />
-            <p class="headerSliderText">Pague com cartões em até 12x</p>
-          </div>
+          <div id="headerCarousel">
+            <div class="headerSlider">
+              <img
+                class="headerSliderIcon"
+                src="./src/assets/headerCarousel/shield.png"
+              />
+              <p class="headerSliderText">Site 100% seguro com segurança SSL</p>
+            </div>
 
-          <div class="headerSlider">
-            <img
-              class="headerSliderIcon"
-              src="./src/assets/headerCarousel/shield.png"
-            />
-            <p class="headerSliderText">Site 100% seguro com segurança SSL</p>
-          </div>
+            <div class="headerSlider">
+              <img
+                class="headerSliderIcon"
+                src="./src/assets/headerCarousel/creditcard.png"
+              />
+              <p class="headerSliderText">Pague com cartões em até 12x</p>
+            </div>
 
-          <div class="headerSlider">
-            <img
-              class="headerSliderIcon"
-              src="./src/assets/headerCarousel/creditcard.png"
-            />
-            <p class="headerSliderText">Pague com cartões em até 12x</p>
+            <div class="headerSlider">
+              <img
+                class="headerSliderIcon"
+                src="./src/assets/headerCarousel/shield.png"
+              />
+              <p class="headerSliderText">Site 100% seguro com segurança SSL</p>
+            </div>
+            <div class="headerSlider">
+              <img
+                class="headerSliderIcon"
+                src="./src/assets/headerCarousel/shield.png"
+              />
+              <p class="headerSliderText">Site 100% seguro com segurança SSL</p>
+            </div>
           </div>
         </div>
-        
       </header>
       <main>
         <div>
@@ -2273,5 +2286,6 @@
     <script src="./src/scripts/faq.js"></script>
     <script src="./src/scripts/moviesCarousel.js"></script>
     <script src="./src/scripts/channelsCarousel.js"></script>
+    <script src="./src//scripts/headerCarousel.js"></script>
   </body>
 </html>
