--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="src/styles/globalStyle.css" />
     <link rel="stylesheet" href="./src/styles/style.css" />
     <link rel="stylesheet" href="./src/styles/carousel.css" />
+    <link rel="stylesheet" href="./src/styles/toasty.css">
   </head>
   <body>
     <div class="pageWapper">
@@ -72,6 +73,10 @@
             alt=""
             class="background-shape-rigth"
           />
+        </div>
+
+        <div class="containerPlayer">
+          <div id="vid_637656e453b6db000b4f601b" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_637656e453b6db000b4f601b" src="https://images.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637656e453b6db000b4f601b/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_637656e453b6db000b4f601b" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_637656e453b6db000b4f601b">var s=document.createElement("script");s.src="https://scripts.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637656e453b6db000b4f601b/player.js",s.async=!0,document.head.appendChild(s);</script>
         </div>
 
         <div class="containerInfo">
@@ -146,7 +151,7 @@
             <div class="containarPlans__item">
               <div class="containarPlans__price">
                 <h2>Mensal</h2>
-
+                <p class="oldValue">R$50</p>
                 <p>R$25</p>
 
                 <a href=""> Assinar </a>
@@ -346,10 +351,11 @@
                 </div>
               </div>
             </div>
+
             <div class="containarPlans__item containarPlans__item__Primary">
               <div class="containarPlans__price">
                 <h2>Trimestral</h2>
-
+                <p class="oldValue">R$120</p>
                 <p>R$60</p>
 
                 <a href="" class="containarPlans__button"> Assinar </a>
@@ -549,10 +555,11 @@
                 </div>
               </div>
             </div>
+
             <div class="containarPlans__item">
               <div class="containarPlans__price">
                 <h2>Semestral</h2>
-
+                <p class="oldValue">R$300</p>
                 <p>R$150</p>
 
                 <a href=""> Assinar </a>
@@ -757,7 +764,7 @@
             <div class="containarPlans__item containarPlans__item__Primary">
               <div class="containarPlans__price">
                 <h2>Trimestral</h2>
-
+                <p class="oldValue">R$120</p>
                 <p>R$60</p>
 
                 <a href="" class="containarPlans__button"> Assinar </a>
@@ -961,7 +968,7 @@
             <div class="containarPlans__item">
               <div class="containarPlans__price">
                 <h2>Mensal</h2>
-
+                <p class="oldValue">R$50</p>
                 <p>R$25</p>
 
                 <a href=""> Assinar </a>
@@ -1165,7 +1172,7 @@
             <div class="containarPlans__item">
               <div class="containarPlans__price">
                 <h2>Semestral</h2>
-
+                <p class="oldValue">R$300</p>
                 <p>R$150</p>
 
                 <a href=""> Assinar </a>
@@ -1656,7 +1663,6 @@
         <div class="containerChannels">
           <h2>Canais No Brasil</h2>
 
-         
         </div>
 
         <div class="containerServicesInfo">
@@ -2071,6 +2077,24 @@
           </div>
         </div>
 
+        <div class="containerPlayerRating">
+          <h2>Juliana Freitas (São Paulo)</h2>
+
+          <div id="vid_637e7b8106deba000b06490d" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_637e7b8106deba000b06490d" src="https://images.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b8106deba000b06490d/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_637e7b8106deba000b06490d" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_637e7b8106deba000b06490d">var s=document.createElement("script");s.src="https://scripts.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b8106deba000b06490d/player.js",s.async=!0,document.head.appendChild(s);</script>
+        </div>
+
+        <div class="containerPlayerRating">
+          <h2>João Paulo (Rio Grande do Sul)</h2>
+
+          <div id="vid_637e7b7906deba000b064909" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_637e7b7906deba000b064909" src="https://images.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b7906deba000b064909/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_637e7b7906deba000b064909" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_637e7b7906deba000b064909">var s=document.createElement("script");s.src="https://scripts.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b7906deba000b064909/player.js",s.async=!0,document.head.appendChild(s);</script>
+        </div>
+
+        <div class="containerPlayerRating">
+          <h2>Brenda Assis (Minas Gerais)</h2>
+
+          <div id="vid_637e7b7df28d2a000abd5c04" style="position:relative;width:100%; height: 100%; padding: 141.66666666666669% 0 0;"><img id="thumb_637e7b7df28d2a000abd5c04" src="https://images.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b7df28d2a000abd5c04/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_637e7b7df28d2a000abd5c04" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_637e7b7df28d2a000abd5c04">var s=document.createElement("script");s.src="https://scripts.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b7df28d2a000abd5c04/player.js",s.async=!0,document.head.appendChild(s);</script>
+        </div>
+
         <div class="containerFaq" id="duvidas">
           <h2>FAQ</h2>
 
@@ -2107,6 +2131,7 @@
             </li>
           </ul>
         </div>
+
       </main>
 
       <footer class="containerFooter">
@@ -2134,9 +2159,18 @@
           <span> Copyright ©2022 All rights reserved | LIBERANDO CANAIS</span>
         </div>
       </footer>
+
     </div>
+
+    <div id="toast">
+      <span id="toast-name"></span>
+      <span id="toast-plan"></span>
+      <button id="toast-close">X</button>
+    </div>
+
     <script src="./src/scripts/index.js"></script>
     <script src="./src/scripts/faq.js"></script>
+    <script src="./src/scripts/toasty.js"></script>
     <script src="./src/scripts/moviesCarousel.js"></script>
     <script src="./src/scripts/channelsCarousel.js"></script>
   </body>
