feat: styles rules for carousels

--- a/index.html
+++ b/index.html
@@ -1792,6 +1792,51 @@
           </div>
         </div>
 
+        <div class="streamingPlatformsContainer">
+          <h2 id="streamingPlatformsTittle">
+            As melhores plataformas de stream
+          </h2>
+          <section id="streamingPlatformsContainer">
+            <ul id="streamingPlatformsCarousel" class="animate">
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/appletv.png" />
+              </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/disneyplus.png" />
+              </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/globoplay.png" />
+              </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/hbomax.png" />
+              </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/HuluLogo.png" />
+              </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/netflix_o7nyzq.png" />
+              </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/paramount-plus.png" />
+              </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/primevideo.png" />
+              </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/starplus.png" />
+              </li>
+            </ul>
+          </section>
+        </div>
+
         <div class="containerServicesInfo">
           <div class="containerServicesInfo__title">
             <h2>Você só encontra aqui</h2>
@@ -2287,5 +2332,6 @@
     <script src="./src/scripts/moviesCarousel.js"></script>
     <script src="./src/scripts/channelsCarousel.js"></script>
     <script src="./src//scripts/headerCarousel.js"></script>
+    <script src="./src/scripts/stremingCarousel.js"></script>
   </body>
 </html>
