feat: channels carousel

--- a/index.html
+++ b/index.html
@@ -1646,22 +1646,13 @@
                 <img src="./src/assets/channels/fishtv.png" />
               </li>
               <li class="channelSlide animate">
-                <img src="./src/assets/channels/food.png" />
-              </li>
-              <li class="channelSlide animate">
                 <img src="./src/assets/channels/foodnetwork.png" />
               </li>
               <li class="channelSlide animate">
                 <img src="./src/assets/channels/foxnews.png" />
               </li>
               <li class="channelSlide animate">
-                <img src="./src/assets/channels/foxsports.png" />
-              </li>
-              <li class="channelSlide animate">
                 <img src="./src/assets/channels/foxsports2.png" />
-              </li>
-              <li class="channelSlide animate">
-                <img src="./src/assets/channels/futura.png" />
               </li>
               <li class="channelSlide animate">
                 <img src="./src/assets/channels/fx.png" />
@@ -2417,10 +2408,15 @@
     </div>
 
     <div id="toast">
+      <img
+        class="toast-icon"
+        href="#planos"
+        src="./src/assets/circleCheck.svg"
+      />
       <a id="toast-name" class="toast-texts" href="#planos"></a>
       <a id="toast-plan" class="toast-texts" href="#planos"></a>
       <button id="toast-close">X</button>
-    </br>
+      <br />
       <a class="toast-texts toast-text-bold" href="#planos">Adquira já!</a>
     </div>
 
