add items footer

--- a/index.html
+++ b/index.html
@@ -2567,13 +2567,23 @@
               <h2>Páginas</h2>
               <a href="#planos">Planos</a>
             </li>
+          
             <li>
               <h2>Links Rápidos</h2>
               <a target="_blank" href="https://player.liberandocanais.com/"
                 >Web Player</a
               >
             </li>
+
+            <li>
+              <h2>Termos Legais</h2>
+              <a target="_blank" href="#">Politicas de privacidade</a>
+              <a target="_blank" href="#">Termos de uso</a>
+            </li>
           </ul>
+        </div>
+        <div class="containerFooter__love">
+          <span>Feito com muito amor no Brasil <img src="./src/assets/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="coração"></span>
         </div>
         <div class="containerCopyrigth">
           <span>© LIBERANDO CANAIS</span>
