--- a/index.html
+++ b/index.html
@@ -1856,6 +1856,42 @@
               <li class="streamingPlatformsSlide animate">
                 <img src="./src/assets/streamingCarousel/starplus.png" />
               </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/appletv.png" />
+              </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/disneyplus.png" />
+              </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/globoplay.png" />
+              </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/hbomax.png" />
+              </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/HuluLogo.png" />
+              </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/netflix_o7nyzq.png" />
+              </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/paramount-plus.png" />
+              </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/primevideo.png" />
+              </li>
+
+              <li class="streamingPlatformsSlide animate">
+                <img src="./src/assets/streamingCarousel/starplus.png" />
+              </li>
             </ul>
           </section>
         </div>
