--- a/index.html
+++ b/index.html
@@ -1548,6 +1548,43 @@
           />
         </div>
 
+        <div class="containerSafety">
+          <div class="containerSafety__title">
+            <h2>Você não acha seguro comprar na Internet?</h2>
+            <img src="./src/assets/servicesInfo/pc_cartao.png" alt="pc cartao">
+          </div>
+
+          <div class="containerSafety__info">
+            <div class="containerSafety__info-text">
+              <h2><span>Não se preocupe!</span> Veja como é seguro...</h2>
+
+              <p>
+                Nossa loja nunca vai guardar suas informações pessoais, nem dados de pagamento.
+                Ao utilizar seu cartão no processo de pagamento, essas informações só podem ser visualizadas na operadora do seu cartão/banco e não temos acesso a essas informações.
+                Lei Geral de Proteção de Dados – LGPD Lei n. 13.709, de 14 de agosto de 2018</p>
+            </div>
+
+            <div class="containerSafety__list">
+              <div class="containerSafety__item">
+                <img src="./src/assets/securytiInfo/settings_input_antenna_FILL1_wght400_GRAD0_opsz48.svg" alt="escudo">
+                <p><span>Instalação</span> <br/> Após o pagamento, entraremos em contato para instalação</p>
+              </div>
+              <div class="containerSafety__item">
+                <img src="./src/assets/securytiInfo/verified_user_FILL1_wght400_GRAD0_opsz48.svg" alt="escudo">
+                <p>Dados pessoais sigilosos não são compartilhados</p>
+              </div>
+              <div class="containerSafety__item">
+                <img src="./src/assets/securytiInfo/lock_FILL1_wght400_GRAD0_opsz48.svg" alt="cadeado">
+                <p>Site blindado e protegido contra fraudes e roubo</p>
+              </div>
+              <div class="containerSafety__item">
+                <img src="./src/assets/securytiInfo/credit_score_FILL1_wght400_GRAD0_opsz48.svg" alt="cartao de credito">
+                <p>Formas de pagamentos 100% protegida</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="containerFamily">
           <h2 id="channels">Programação completa para sua família</h2>
           <section id="channelSlideWrapper">
@@ -2219,12 +2256,48 @@
                   />
                 </div>
               </div>
+                <div
+                id="vid_637e7b7906deba000b064909"
+                style="position: relative; width: 100%; padding: 56.25% 0 0"
+              >
+                <img
+                  id="thumb_637e7b7906deba000b064909"
+                  src="https://images.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b7906deba000b064909/thumbnail.jpg"
+                  style="
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    display: block;
+                  "
+                />
+                <div
+                  id="backdrop_637e7b7906deba000b064909"
+                  style="
+                    position: absolute;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
+                    -webkit-backdrop-filter: blur(5px);
+                    backdrop-filter: blur(5px);
+                  "
+                ></div>
+                </div>
+                <script type="text/javascript" id="scr_637e7b7906deba000b064909">
+                  var s = document.createElement("script");
+                  (s.src =
+                    "https://scripts.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b7906deba000b064909/player.js"),
+                    (s.async = !0),
+                    document.head.appendChild(s);
+                </script>
 
               <div class="containerUserRating__user">
-                <img src="./src/assets/usersComments/2.jpg" alt="user" />
+                <img src="./src/assets/usersComments/1.jpg" alt="user" />
                 <div class="containerUserRating__user__title">
-                  <h4>Jorge</h4>
-                  <p>Plano Trimestral</p>
+                  <h4>Helena</h4>
+                  <p>Plano Trimestral (São Paulo)</p>
                 </div>
               </div>
             </div>
@@ -2261,11 +2334,48 @@
                 </div>
               </div>
 
+              <div
+              id="vid_637e7b8106deba000b06490d"
+              style="position: relative; width: 100%; padding: 56.25% 0 0"
+            >
+              <img
+                id="thumb_637e7b8106deba000b06490d"
+                src="https://images.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b8106deba000b06490d/thumbnail.jpg"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                  display: block;
+                "
+              />
+              <div
+                id="backdrop_637e7b8106deba000b06490d"
+                style="
+                  position: absolute;
+                  top: 0;
+                  width: 100%;
+                  height: 100%;
+                  -webkit-backdrop-filter: blur(5px);
+                  backdrop-filter: blur(5px);
+                "
+              ></div>
+            </div>
+            <script type="text/javascript" id="scr_637e7b8106deba000b06490d">
+              var s = document.createElement("script");
+              (s.src =
+                "https://scripts.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b8106deba000b06490d/player.js"),
+                (s.async = !0),
+                document.head.appendChild(s);
+            </script>
+
               <div class="containerUserRating__user">
-                <img src="./src/assets/usersComments/3.jpg" alt="user" />
+                <img src="./src/assets/usersComments/2.jpg" alt="user" />
                 <div class="containerUserRating__user__title">
                   <h4>Matheus</h4>
-                  <p>Plano Trimestral</p>
+                  <p>Plano Trimestral (Rio de Janeiro)</p>
                 </div>
               </div>
             </div>
@@ -2278,187 +2388,6 @@
                   Tem bastante canais de boa qualidade, sem muitos travamentos
                   quando assisto não tenho problema nenhum.
                 </p>
-                <div class="containerUserRating__star">
-                  <img
-                    src="./src/assets/containerInfo/star.svg"
-                    alt="avaliação image"
-                  />
-                  <img
-                    src="./src/assets/containerInfo/star.svg"
-                    alt="avaliação image"
-                  />
-                  <img
-                    src="./src/assets/containerInfo/star.svg"
-                    alt="avaliação image"
-                  />
-                  <img
-                    src="./src/assets/containerInfo/star.svg"
-                    alt="avaliação image"
-                  />
-                  <img
-                    src="./src/assets/containerInfo/star.svg"
-                    alt="avaliação image"
-                  />
-                </div>
-              </div>
-
-              <div class="containerUserRating__user">
-                <img src="./src/assets/usersComments/1.png" alt="user" />
-                <div class="containerUserRating__user__title">
-                  <h4>Helena</h4>
-                  <p>Plano Trimestral</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="containerPlayerRating">
-          <div class="containerPlayerRating__list">
-            <div class="containerPlayerRating__item">
-              <div class="containerPlayerRating__title">
-                <img src="./src/assets/containerInfo/aspas.svg" alt="aspas" />
-                <h2>
-                  Juliana Freitas <br />
-                  (São Paulo)
-                </h2>
-                <div class="containerUserRating__star">
-                  <img
-                    src="./src/assets/containerInfo/star.svg"
-                    alt="avaliação image"
-                  />
-                  <img
-                    src="./src/assets/containerInfo/star.svg"
-                    alt="avaliação image"
-                  />
-                  <img
-                    src="./src/assets/containerInfo/star.svg"
-                    alt="avaliação image"
-                  />
-                  <img
-                    src="./src/assets/containerInfo/star.svg"
-                    alt="avaliação image"
-                  />
-                  <img
-                    src="./src/assets/containerInfo/star.svg"
-                    alt="avaliação image"
-                  />
-                </div>
-              </div>
-
-              <div
-                id="vid_637e7b8106deba000b06490d"
-                style="position: relative; width: 100%; padding: 56.25% 0 0"
-              >
-                <img
-                  id="thumb_637e7b8106deba000b06490d"
-                  src="https://images.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b8106deba000b06490d/thumbnail.jpg"
-                  style="
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    display: block;
-                  "
-                />
-                <div
-                  id="backdrop_637e7b8106deba000b06490d"
-                  style="
-                    position: absolute;
-                    top: 0;
-                    width: 100%;
-                    height: 100%;
-                    -webkit-backdrop-filter: blur(5px);
-                    backdrop-filter: blur(5px);
-                  "
-                ></div>
-              </div>
-              <script type="text/javascript" id="scr_637e7b8106deba000b06490d">
-                var s = document.createElement("script");
-                (s.src =
-                  "https://scripts.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b8106deba000b06490d/player.js"),
-                  (s.async = !0),
-                  document.head.appendChild(s);
-              </script>
-            </div>
-
-            <div class="containerPlayerRating__item">
-              <div class="containerPlayerRating__title">
-                <img src="./src/assets/containerInfo/aspas.svg" alt="aspas" />
-                <h2>
-                  João Paulo <br />
-                  (Rio Grande do Sul)
-                </h2>
-                <div class="containerUserRating__star">
-                  <img
-                    src="./src/assets/containerInfo/star.svg"
-                    alt="avaliação image"
-                  />
-                  <img
-                    src="./src/assets/containerInfo/star.svg"
-                    alt="avaliação image"
-                  />
-                  <img
-                    src="./src/assets/containerInfo/star.svg"
-                    alt="avaliação image"
-                  />
-                  <img
-                    src="./src/assets/containerInfo/star.svg"
-                    alt="avaliação image"
-                  />
-                  <img
-                    src="./src/assets/containerInfo/star.svg"
-                    alt="avaliação image"
-                  />
-                </div>
-              </div>
-              <div
-                id="vid_637e7b7906deba000b064909"
-                style="position: relative; width: 100%; padding: 56.25% 0 0"
-              >
-                <img
-                  id="thumb_637e7b7906deba000b064909"
-                  src="https://images.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b7906deba000b064909/thumbnail.jpg"
-                  style="
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    display: block;
-                  "
-                />
-                <div
-                  id="backdrop_637e7b7906deba000b064909"
-                  style="
-                    position: absolute;
-                    top: 0;
-                    width: 100%;
-                    height: 100%;
-                    -webkit-backdrop-filter: blur(5px);
-                    backdrop-filter: blur(5px);
-                  "
-                ></div>
-              </div>
-              <script type="text/javascript" id="scr_637e7b7906deba000b064909">
-                var s = document.createElement("script");
-                (s.src =
-                  "https://scripts.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b7906deba000b064909/player.js"),
-                  (s.async = !0),
-                  document.head.appendChild(s);
-              </script>
-            </div>
-
-            <div class="containerPlayerRating__item">
-              <div class="containerPlayerRating__title">
-                <img src="./src/assets/containerInfo/aspas.svg" alt="aspas" />
-                <h2>
-                  Brenda Assis <br />
-                  (Minas Gerais)
-                </h2>
                 <div class="containerUserRating__star">
                   <img
                     src="./src/assets/containerInfo/star.svg"
@@ -2524,10 +2453,18 @@
                   (s.async = !0),
                   document.head.appendChild(s);
               </script>
+
+              <div class="containerUserRating__user">
+                <img src="./src/assets/usersComments/3.jpg" alt="user" />
+                <div class="containerUserRating__user__title">
+                  <h4>Carol</h4>
+                  <p>Plano Trimestral (Rio Grande do Sul)</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        
+
         <div class="containerFaq" id="duvidas">
           <h2>FAQ</h2>
         </div>
@@ -2615,13 +2552,19 @@
               <a target="_blank" href="#">Politicas de privacidade</a>
               <a target="_blank" href="#">Termos de uso</a>
             </li>
+
+            <li>
+              <h2>Aplicativos</h2>
+              <div class="containerFooter__item">
+              <a target="_blank" href="#"><img src="./src/assets/footer/play-store.png" alt="app store"></a>
+              <a target="_blank" href="#"><img src="./src/assets/footer/apple-store.png" alt="app store"></a>
+            </div>
+            </li>
           </ul>
         </div>
-        <div class="containerFooter__love">
-          <span>Feito com muito amor no Brasil <img src="./src/assets/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="coração"></span>
-        </div>
+
         <div class="containerCopyrigth">
-          <span>© LIBERANDO CANAIS</span>
+          <span class="containerCopyrigth__item">Feito com muito amor no Brasil <img src="./src/assets/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="coração"></span>
           <span> Copyright ©2022 All rights reserved | LIBERANDO CANAIS</span>
         </div>
       </footer>
